# normalization

./: README.md
cpp-normalization-module/: CMakeLists.txt  README.md
cpp-normalization-module/src/: main.cpp  normalization_module.cpp  normalization_module.hpp
pytorch-normalisation-module/: README.md  requirements.txt  setup.py
pytorch-normalisation-module/data/: input_samples.pt  output_samples.pt
pytorch-normalisation-module/notebooks/: example_usage.ipynb
pytorch-normalisation-module/src/: normalization.py
